--- a/index.html
+++ b/index.html
@@ -13,7 +13,30 @@
   </head>
   <body>
     <div class="container">
-      
+      <div class="col">
+        <h2>DANCE</h2>
+        <div class="caption">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt sequi, </p>
+          <button type="button">Know More</button>
+        </div>
+        <img src="img/img1.png" alt="">
+      </div>
+      <div class="col">
+        <h2>GYM</h2>
+        <div class="caption">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt sequi, </p>
+          <button type="button">Know More</button>
+        </div>
+        <img src="img/img2.png" alt="">
+      </div>
+      <div class="col">
+        <h2>YOGA</h2>
+        <div class="caption">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt sequi, </p>
+          <button type="button">Know More</button>
+        </div>
+        <img src="img/img3.png" alt="">
+      </div>
     </div>
 
   </body>
